/collection/{id}: fix unreadable text on tooltip.
Also added country with long name to the prototype to easy reproduce
this issue.

Fix #367

--- a/src/main/webapp/WEB-INF/static/styles/main.css
+++ b/src/main/webapp/WEB-INF/static/styles/main.css
@@ -86,3 +86,8 @@ label {
 .dropdown-entry-lang {
 	padding-left: 5px;
 }
+
+/* fix unreadable tooltip on Google Charts (see #367) */
+.goog-tooltip {
+	color: white;
+}
